# snapcat

./: .gitignore  Cargo.toml  LICENSE  README
.github/workflows/: ci.yml  cli-release.yml
src/: lib.rs  main.rs  types.rs
src/core/: cat.rs  mod.rs  tree.rs
src/handler/: config.rs  error.rs
src/utils/: fmt.rs  ignore.rs  mod.rs
