[package]
name = "snapcat"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.25"
glob = "0.3.3"
globset = "0.4.18"
ignore = "0.4.28"
miette = { version = "7.6.0", features = ["fancy"] }
num_cpus = "1.17.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
