[package]
name = "snapcat"
version = "0.2.2"
edition = "2024"

authors = ["mroczect"]
description = "Combine directory tree, file contents, and SHA256 hashes into a single JSON or Markdown document. Perfect for snapshots, code reviews, LLM context building, and auditing."
license = "GPL-3.0"
repository = "https://github.com/mroczect/snapcat"
homepage = "https://github.com/mroczect/snapcat"
documentation = "https://docs.rs/snapcat"
readme = "README"
keywords = ["snapshot", "tree", "markdown", "json", "code-review"]
categories = ["command-line-utilities", "filesystem", "development-tools"]
exclude = ["/target", "/.git", "/.github", "/benches", "/examples", "/tests"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.25"
glob = "0.3.3"
globset = "0.4.18"
ignore = "0.4.28"
miette = { version = "7.6.0", features = ["fancy"] }
num_cpus = "1.17.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
